@@ -208,14 +208,15 @@ typedef enum rpmTag_e {
 /* XXX 2nd underscore prevents tagTable generation */
     RPMTAG_SIG_BASE		= HEADER_SIGBASE,
     RPMTAG_SIGSIZE		= RPMTAG_SIG_BASE+1,
-    RPMTAG_SIGLEMD5_1		= RPMTAG_SIG_BASE+2,
+    RPMTAG_SIGLEMD5_1		= RPMTAG_SIG_BASE+2,	/*!< internal */
     RPMTAG_SIGPGP		= RPMTAG_SIG_BASE+3,
-    RPMTAG_SIGLEMD5_2		= RPMTAG_SIG_BASE+4,
+    RPMTAG_SIGLEMD5_2		= RPMTAG_SIG_BASE+4,	/*!< internal */
     RPMTAG_SIGMD5	        = RPMTAG_SIG_BASE+5,
     RPMTAG_SIGGPG	        = RPMTAG_SIG_BASE+6,
     RPMTAG_SIGPGP5	        = RPMTAG_SIG_BASE+7,	/*!< internal */
 
-    RPMTAG_SHA1HEADER		= RPMTAG_SIG_BASE+8,
+    RPMTAG_BADSHA1HEADER	= RPMTAG_SIG_BASE+8,	/*!< internal */
+    RPMTAG_SHA1HEADER		= RPMTAG_SIG_BASE+9,
 
     RPMTAG_NAME  		= 1000,
     RPMTAG_VERSION		= 1001,
